--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
 <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
+<style>
+  body {
+    text-align: center;
+    padding: 3rem;
+  }
+</style>
 <h1>Speed up / slow down YouTube</h1>
 <h2>Speed up or slow down YouTube videos past than the default (i.e. below 0.25x or over 2x)
 <h3>Drag the link below to your bookmarks bar to get started!  (then you can just click on the bookmark to use)</h3>
